# KarmaChameleon

./: .flake8  .gitignore  Bot.py  EventManager.py  Item.py  KarmaItem.py  Makefile  README.md  Snark.py  app.py  bot.py  event_manager.py  karma_chameleon.py  karma_item.py  main.py  pyproject.toml  requirements.in  requirements.txt  setup.py  snark.py  socket_mode.py
.github/: dependabot.yml
.github/workflows/: ci.yml
karma_chameleon/: bot.py  karma_item.py  main.py  snark.py
tests/: test_bot.py  test_karma_chameleon.py  test_karma_item.py  test_snark.py
