[project]
name = "karmachameleon"
version = "2.0.0"
description = "A simple Karma Bot for Slack."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "flask>=3.1.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.13",
    "slack-bolt>=1.23.0",
]

[project.scripts]
karmachameleon = "karmachameleon.main:main"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra -v --cov"

[tool.coverage.run]
omit = [
  ".venv/*",
  "tests/*",
  "setup.py",
  "*__init__.py*",
]
branch = true

[tool.coverage.report]
precision = 2

[tool.ruff]
line-length = 100
